Bug 696569 - Allow for non-premultiplied data for canvases - r=bjacob,joedrew